2001-06-14  Peter Stephenson  <pws@csr.com>

	* 14921: Completion/Zsh/_zftp: autoload zfcd_match and zfget_match
	if necessary.

2001-06-13  Oliver Kiddle  <opk@zsh.org>

	* 14896: Completion/Zsh/Type/_command_names: don't complete read-only
	parameters on the left side of an assignment

2001-06-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 14903: Src/Zle/complist.c, Src/Zle/zle_tricky.c: fixes for
	display bugs for completion lists (cursor left one line to far
	up or down)

2001-06-13  Peter Stephenson  <pws@csr.com>

	* 14893: Src/signals.c: make handler mod_export because it's
	needed for signal queueing in various modules.  Probably
	sensible to change handler to zhandler too --- not done yet.

2001-06-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 14897 (and Oliver Kiddle: 14862): Completion/Base/Utility/_values,
	Completion/Unix/Command/_mount, Completion/Unix/Type/_dir_list,
	Src/Zle/computil.c: fix for comparguments (completing after
	single letter options that get their argument in the next
	word); make _values ignore some of the standard option it may
	get; make _mount use _dir_list in some places and improve that;
	`document' comparguments and compvalues with some comments in
	computil.c

	* 14883 (Jos Backus): Completion/Unix/Command/_mount: add code for
	BSDish systems

	* 14841: Completion/Base/Utility/_values, Src/Zle/computil.c:
	new word parsing for compvalues; this should now handle empty
	separators correctly, as far as it is possible

2001-06-13  Wayne Davison  <wayned@users.sourceforge.net>

        * 14793: Src/hist.c: Don't mark a HIST_TMPSTORE entry with HIST_OLD
	so that the HFILE_FAST algorithm in savehistfile() will recheck this
	histnum later.

2001-06-13  Andrej Borsenkow <bor@zsh.org>

	* 14766: Src/prompt.c: uniform %l substitution

2001-06-13  Peter Stephenson  <pws@csr.com>

	* unposted: Completion/compinstall: spotted by Bart: assignments
	when finding $fpath if not set in current shell were completely
	garbled.
